# ttrpg-backend

./: .dockerignore  .gitignore  Dockerfile  ENDPOINTS.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  start.sh  test.py
.containers/ttrpg_database/: postmaster.pid
.containers/ttrpg_database/global/: 1260  1262  2671  pg_control  pg_internal.init
.run/: Docker Compose.run.xml  Dockerfile.run.xml  TTRPG - Backend.run.xml
docs/: ENDPOINTS.md
docs/endpoints/: ENDPOINTS.md  character.md  components.md  damage_dice.md  race.md  spell.md
docs/legacy/fixtures/: armor_proficiencies.json  inner.py  spells_(fixture).json  tool_proficiencies.json  trash.py  weapon_proficiencies.json
docs/resources/: RESOURCES.md  example_character.json  spells.json  translate_jsons.ipynb
legacy/fixtures/: properties.json  tags.json
scripts/docker/: start.sh
src/utils/: basic_crud_generator.py  character_request_utils.py  character_validation.py  example.py  http_options_decorator.py  spell_request_utils.py  spell_requests_utils.py
src/web/: .env.dev  .env.docker  .my_pgpass  .pg_service.conf  db.dev.sqlite3  manage.py
src/web/api/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
src/web/core/: asgi.py  settings.py  urls.py  wsgi.py
src/web/fixtures/: ability_scores.json  actions.json  backgrounds.json  characters.json  classes.json  (+19 more)
ttrpgbackend/: .env.dev  .env.docker  db.sqlite3  manage.py
ttrpgbackend/api/: admin.py  models.py  urls.py  views.py
ttrpgbackend/ttrpgbackend/: asgi.py  settings.py  urls.py  wsgi.py
(+18 files in other folders)
